# Present-Yourself

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  auth.py  config.py  crypto.py  db.py  main.py  models.py
apps/api/app/adapters/: __init__.py  image.py  llm.py  research.py  storage.py
apps/api/app/routers/: api_keys.py  decks.py  exports.py  images.py  me.py  projects.py  templates.py  uploads.py
apps/api/app/schemas/: api.py  slide.py
apps/api/app/services/: keys.py  pptx_render.py  template_extract.py
apps/api/app/tasks/: _helpers.py  celery_app.py  export_pptx.py  generate.py  template_extract.py
apps/web/: README.md  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/d/[deckId]/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/dashboard/new/: page.tsx
apps/web/app/p/[projectId]/: page.tsx
apps/web/app/settings/api-keys/: page.tsx
apps/web/components/: AppShell.tsx
apps/web/lib/: api.ts  schema.ts  utils.ts
docs/: 01-tech-stack.md  02-prd.md  03-requirements.md  04-ui-ux.md  README.md
infra/: render.yaml
