[project]
name = "present-yourself-api"
version = "0.1.0"
description = "Present Yourself API + worker"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "gunicorn>=23.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30",
  "psycopg2-binary>=2.9.10",
  "alembic>=1.13",
  "redis>=5.1",
  "celery[redis]>=5.4",
  "cryptography>=43.0",
  "httpx>=0.27",
  "python-multipart>=0.0.12",
  "python-pptx>=1.0",
  "lxml>=5.3",
  "Pillow>=11.0",
  "trafilatura>=1.12",
  "openai>=1.55",
  "anthropic>=0.39",
  "google-genai>=0.3",
  "boto3>=1.35",
  "tenacity>=9.0",
  "structlog>=24.4",
  "sentry-sdk>=2.18",
  "PyJWT[crypto]>=2.10",
  "email-validator>=2.2",
  "orjson>=3.10",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
